# FuChuangSai_A22

./: .gitignore  README.md  compose.local.yaml  compose.remote.models.yaml  compose.remote.yaml  compose.yaml
.waylog/history/: 2026-03-24_14-19Z-我在参加服创赛_这是A22题关于智能问答数字人系统的赛题_当前文件夹是我们一个组员建立的我需要你将当.md
System_Design/: A2F_UE_BRIDGE_RUNBOOK.md  AUTODL_REMOTE_FRONTEND_RUNBOOK.md  CHANGELOG_2026-04_A22.md  CURRENT_RUNBOOK.md  EMOTION_MODELS_SETUP.md  REMOTE_DOCKER_MULTI_CONTAINER_RUNBOOK.md  autodl_http_connection_guide.md
System_Design/version1/: ARCHITECTURE.md
System_Design/version2/: ARCHITECTURE.md
System_Design/version3/: ARCHITECTURE.md  FILE_GUIDE.md  RUN_AND_TEST.md
System_Design/version4/: ARCHITECTURE.md
System_Design/version5/: architecture.md
System_Design/version6/: ARCHITECTURE.md
System_Design/version7/: ARCHITECTURE.md
System_Design/version8/: ARCHITECTURE_ANALYSIS.md  REQUIREMENT_PROGRESS_AND_PLAN.md
System_Design/version9/: WEBSOCKET_MIGRATION_PLAN.md
a22_demo/: avatar_ws_bridge.py  listen_bridge.py  ue_a2f_runtime_adapter.py  ue_live_sync_daemon.py  ue_sync_latest_to_actor.py  ue_sync_latest_to_actor_apply_inplace.py
edge-backend/: app.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js
infra/autodl/: proxy-config.yaml
infra/nginx/: autodl-6008-proxy.conf  default.conf
local/: README.md
local/edge-backend/: app.py  config.py  models.py  requirements.txt
local/frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
remote/: README.md
remote/avatar-service/: .env.example  Dockerfile  README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt
remote/orchestrator/: Dockerfile  README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt
remote/qwen-server/: Dockerfile  pyproject.toml  requirements.txt
remote/speech-service/: .env.example  Dockerfile  README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt
remote/speech-service/routes/: health.py  transcribe.py
remote/speech-service/scripts/: download_emotion2vec_model.py
remote/speech-service/services/: asr_runtime.py  audio_stream_buffer.py  feature_extractor.py  speech_emotion_runtime.py  storage.py  wav_utils.py
remote/vision-service/: .env.example  Dockerfile  app.py  config.py  models.py  pyproject.toml  requirements.txt
remote/vision-service/routes/: extract.py  health.py
remote/vision-service/scripts/: prefetch_face_emotion_model.py
remote/vision-service/services/: facial_emotion_runtime.py  frame_feature_extractor.py  qwen_vl_runtime.py  storage.py  video_ring_buffer.py
scripts/release/: package_competition_submission.sh
scripts/remote/: restart_avatar_service_soulx_full.sh  start_remote_stack_tmux.sh  (+1 more)
shared/: README.md  observability.py
(+151 files in other folders)
