[project]
name = "a22-vision-service"
version = "0.1.0"
description = "Remote vision preprocessing service for A22"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.0",
  "pydantic==2.7.0",
  "Pillow==10.4.0",
  "torch==2.6.0",
  "nvidia-cuda-runtime-cu12>=12.6,<13",
  "nvidia-cublas-cu12>=12.6,<13",
  "nvidia-cudnn-cu12>=9.5,<10",
  "nvidia-cufft-cu12>=11.3,<12",
  "nvidia-curand-cu12>=10.3,<11",
  "nvidia-cusolver-cu12>=11.7,<12",
  "nvidia-cusparse-cu12>=12.5,<13",
  "nvidia-nccl-cu12>=2.21,<3",
  "nvidia-nvtx-cu12>=12.6,<13",
  "transformers==4.51.3",
  "accelerate==1.3.0",
  "safetensors==0.7.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
